--- a/SchemaRefinery/docs/requirements.txt
+++ b/SchemaRefinery/docs/requirements.txt
@@ -2,7 +2,7 @@ docutils==0.20.1
 numpydoc==1.2
 sphinx==7.2.6
 sphinx_rtd_theme==1.2.2
-sphinx-autobuild==2023.3.0
-sphinxcontrib-napoleon==0.7
-sphinxcontrib-bibtex==2.5.0
-sphinx-copybutton==0.5.2
+sphinx-autobuild
+sphinxcontrib-napoleon
+sphinxcontrib-bibtex
+sphinx-copybutton
