--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,18 +7,18 @@ name = "SchemaRefinery"
 version = "0.3"
 requires-python = ">=3.9"
 dependencies = [
-        "numpy" >= 1.24.3
-        "scipy" >= 1.10.1
-        "biopython" >= 1.79
-        "plotly" >= 5.8.0
-        "requests" >= 2.27.1
-        "pandas" >= 1.5.1,<2.1
-        "psutil" >= 5.1.1
+    "numpy >= 1.24.3",
+    "scipy >= 1.10.1",
+    "biopython >= 1.79",
+    "plotly >= 5.8.0",
+    "requests >= 2.27.1",
+    "pandas >= 1.5.1,<2.1",
+    "psutil >= 5.1.1",
 ]
 authors = [
-    {name = "Mykyta Forofontov"}
-    {name = "Rafael Mamede"},,
-    {name = "Mário Ramirez"}
+    {name = "Mykyta Forofontov"},
+    {name = "Rafael Mamede"},
+    {name = "Mário Ramirez"},
 ]
 maintainers = [
   {name = "UMMI", email = "imm-bioinfo@medicina.ulisboa.pt"}
@@ -51,8 +51,8 @@ classifiers = [
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: 3.13',
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Topic :: Scientific/Engineering :: Bio-Informatics",
+    'Programming Language :: Python :: Implementation :: CPython',
+    'Topic :: Scientific/Engineering :: Bio-Informatics',
 ]
 
 [project.scripts]
