--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "SchemaRefinery"
-version = "0.3.1"
+version = "0.3.2.4"
 requires-python = ">=3.9"
 dependencies = [
-    "numpy >= 1.24.3",
+    "numpy >= 1.24.3, <2.0.0",
     "scipy >= 1.10.1",
     "biopython >= 1.79",
     "plotly >= 5.8.0",
     "requests >= 2.27.1",
-    "pandas >= 1.5.1,<2.1",
+    "pandas >= 1.5.1",
     "psutil >= 5.1.1",
+    "tqdm >= 4.62.0",
+    "networkx >= 2.6.0, <3.0.0"
 ]
 authors = [
     {name = "Mykyta Forofontov"},
@@ -54,6 +56,10 @@ classifiers = [
     'Programming Language :: Python :: Implementation :: CPython',
     'Topic :: Scientific/Engineering :: Bio-Informatics',
 ]
+
+[project.scripts]
+"SchemaRefinery" = "SchemaRefinery.schema_refinery:entry_point"
+"SR" = "SchemaRefinery.schema_refinery:entry_point"
 
 [project.urls]
 Repository = "https://github.com/B-UMMI/Schema_Refinery"
