--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-numpy>=1.24.3
+numpy>=1.24.3,<2.0.0
 scipy>=1.10.1
 biopython>=1.79
 plotly>=5.8.0
 requests>=2.27.1
-pandas>=1.5.1,<2.1
-psutil >= 5.1.1
+pandas>=1.5.1,<2.0.0
+psutil>=5.1.1
+tqdm>=4.62.0
+networkx>=2.6.0,<3.0.0
