Feat: Update PYPI and dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "SchemaRefinery"
-version = "0.3.2.4"
+version = "0.3.3"
 requires-python = ">=3.9"
 dependencies = [
     "numpy >= 1.24.3, <2.0.0",
@@ -12,10 +12,11 @@ dependencies = [
     "biopython >= 1.79",
     "plotly >= 5.8.0",
     "requests >= 2.27.1",
-    "pandas >= 1.5.1",
+    "pandas >= 1.5.1, <2.0.0",
     "psutil >= 5.1.1",
     "tqdm >= 4.62.0",
-    "networkx >= 2.6.0, <3.0.0"
+    "networkx >= 2.6.0, <3.0.0",
+    "chewbbaca >= 3.3.10"
 ]
 authors = [
     {name = "Mykyta Forofontov"},
