--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = SchemaRefinery
-version = 0.3.2
+version = 0.3.3
 description = Tool to refine cg/wgMLST Schemas
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -29,13 +29,16 @@ keywords = schema_refinery, bioinformatics, genomics, mlst, bacteria, cgmlst, wg
 packages = find:
 python_requires = >=3.9
 install_requires =
-    numpy >= 1.24.3
+    numpy >= 1.24.3, < 2.0.0
     scipy >= 1.10.1
     biopython >= 1.79
     plotly >= 5.8.0
     requests >= 2.27.1
-    pandas >= 1.5.1,<2.1
+    pandas >= 1.5.1, < 2.0.0
     psutil >= 5.1.1
+    tqdm >= 4.62.0
+    networkx >= 2.6.0, < 3.0.0
+    chewbbaca >= 3.3.10     
 
 [options.entry_points]
 console_scripts =
