--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,11 @@ dependencies = [
     "psutil >= 5.1.1",
     "tqdm >= 4.62.0",
     "networkx >= 2.6.0, <3.0.0",
-    "chewbbaca >= 3.3.10"
+    "chewBBACA >= 3.3.10"
 ]
 authors = [
+    {name = "Rita Andrade"},
+    {name = "Nuno Faria"},
     {name = "Mykyta Forofontov"},
     {name = "Rafael Mamede"},
     {name = "Mário Ramirez"},
