--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "SchemaRefinery"
-version = "0.3.2.4"
+version = "0.4.0.0."
 requires-python = ">=3.9"
 dependencies = [
     "numpy >= 1.24.3, <2.0.0",
